# Mower-Project

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
android/: README.md  base_station.py
docs/: EKF.md  HARDWARE.md  LG580P.md  WINDOWS_BASE.md
scripts/: _win_lib.ps1  base-ntrip.service  install_base_display.sh  install_base_service.sh  install_lg580p_service.sh  install_service.sh  lg580p.service  rover-display.desktop  rover_status.bat  rover_status.ps1  setup_pi.sh  setup_pi_lg580p.sh  start_base.bat  start_base.ps1  start_base.sh  watson-dms.service
src/lg580p/: __init__.py  __main__.py  assembler.py  capture.py  collect.py  command.py  controls.py  ekf.py  fusion.py  imu.py  logger.py  nmea.py  reading.py  rtcm.py  serial_io.py  telemetry.py
src/watson_dms/: __init__.py  __main__.py  capture.py  collect.py  hat_controls.py  logger.py  parser.py  serial_reader.py  switch.py
tests/: test_ekf.py  test_fusion.py  test_imu.py  test_lg580p_logger.py  test_lg580p_nmea.py  test_logger.py  test_parser.py  test_telemetry.py
tools/: ntrip_to_serial.py  retime_csv.py  rover_display.py  serial_monitor.py  viewer.py
