[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "watson-dms-collector"
version = "0.1.0"
description = "Data collection toolkit for the Watson DMS-SGP02 GPS/inertial system on Raspberry Pi"
requires-python = ">=3.9"
dependencies = ["pyserial>=3.5"]

[project.optional-dependencies]
dev = ["pytest>=7"]
# Pi I/O support:
#   - multiio: Sequent Multi-IO HAT button/LEDs over I2C (default control source)
#   - gpiozero/lgpio: fallback for a switch+LED wired directly to Pi GPIO
# On Raspberry Pi OS gpiozero/lgpio ship via apt, so a venv created with
# --system-site-packages (see README) is the recommended path; this extra is
# the fallback for a pip-only install.
pi = ["multiio", "gpiozero>=2.0", "lgpio>=0.2"]

[project.scripts]
watson-dms = "watson_dms.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
